# maxsim-web

./: .eslintrc.json  .gitignore  BENCHMARKS.md  CHANGELOG.md  PHASE2_FINDINGS.md  PHASE3_RESULTS.md  PHASE3_WASM.md  PROGRESS_SUMMARY.md  PUBLISHING.md  QUICK_START_WASM_BENCH.md  README.md  RELEASE_v0.6.0.md  SETUP_RUST.md  WASM_BENCHMARK_GUIDE.md  WASM_BENCHMARK_SETUP.md  WASM_HYPER_OPTIMIZATION_REPORT.md  jest.config.js  package-lock.json  package.json
.github/workflows/: deploy-pages.yml
backup/old-fast-wasm/: maxsim_web_wasm.d.ts  maxsim_web_wasm.js  maxsim_web_wasm_bg.wasm.d.ts  package.json
benchmark/: README.md  fixtures.js  index.html  maxsim-wasm.js  realistic-embeddings.js  runner.js  server.js  test-realism.js  utils.js
benchmark/wasm/: maxsim_web_wasm.d.ts  maxsim_web_wasm_bg.wasm  maxsim_web_wasm_bg.wasm.d.ts
docs/: API_GUIDE.md  PERFORMANCE_IMPROVEMENT_v0.6.0.md  PERFORMANCE_INVESTIGATION_2025-10-26.md  README.md  _config.yml  index.html  maxsim-wasm.js
docs/wasm/: maxsim_web_wasm.js  package.json
examples/: README.md  api-comparison.js  basic.js
scripts/: build-and-deploy.sh  build.js  copy-to-demo.sh  fix-wasm-tables.sh  publish.js  setup-rust.sh  test-correctness.js  test-pages.js
src/js/: index.js  maxsim-baseline.js  maxsim-optimized.js  maxsim-typed.js  maxsim-wasm-node.js  maxsim-wasm-threaded.js  maxsim-wasm-worker.js  maxsim-wasm.js
src/rust/: Cargo.toml
src/rust/src/: lib.rs
test/: README.md  browser-correctness.html  setup.js
test/unit/: maxsim.test.js
