[package]
name = "maxsim_web_wasm"
version = "0.6.0"
authors = ["Joe Hsu <joe32140@gmail.com>"]
edition = "2021"
description = "High-performance MaxSim scoring with WASM and SIMD - 3-5x faster than JavaScript"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-simd"]
